--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -42,11 +42,11 @@
 
         <div class="form-group">
           <label>From</label>
-          <input type="text" name="from" class="form-control" value="demosplash1@gmail.com" />
+          <input type="text" name="from" class="form-control" value="demomail@gmail.com" />
         </div>
         <div class="form-group">
           <label>Password</label>
-          <input type="password" name="pword" class="form-control" value="Splash@123" />
+          <input type="password" name="pword" class="form-control" value="mail@123" />
         </div>
         <div class="form-group">
           <label>Subject</label>
